# overestimation_data

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt
data/beast/lemey/relaxed_clock/hmr/pop_small/: template.xml
data/beast/lemey/relaxed_clock/hmr/pop_tiny/: template.xml
data/beast/lemey/relaxed_clock/hmr/pop_unkwn/: template.xml
data/beast/lemey/relaxed_clock/nmr/pop_small/: template.xml
data/beast/lemey/relaxed_clock/nmr/pop_tiny/: template.xml
data/beast/lemey/relaxed_clock/nmr/pop_unkwn/: template.xml
data/beast/lemey/strict_clock/hmr/pop_small/: template.xml
data/beast/lemey/strict_clock/hmr/pop_tiny/: template.xml
data/beast/lemey/strict_clock/hmr/pop_unkwn/: template.xml
data/beast/lemey/strict_clock/nmr/pop_small/: template.xml
data/beast/lemey/strict_clock/nmr/pop_tiny/: template.xml
data/beast/lemey/strict_clock/nmr/pop_unkwn/: template.xml
data/beast/mascot/relaxed_clock/hmr/pop_small/: template.xml
data/beast/mascot/relaxed_clock/hmr/pop_tiny/: template.xml
data/beast/mascot/relaxed_clock/hmr/pop_unkwn/: template.xml
data/beast/mascot/relaxed_clock/nmr/pop_small/: template.xml
data/beast/mascot/relaxed_clock/nmr/pop_tiny/: template.xml
data/beast/mascot/relaxed_clock/nmr/pop_unkwn/: template.xml
notebooks/: common.py  load_data.py  overestimations.py  pvals.py  tables.py
remote/: justfile
remote/scripts/: beast_array_wrapper.sh  beast_wrapper.sh  submit_virolution.py  virolution_array_wrapper.sh
scripts/: create_figures.sh  dispatch_beast.py
(+6 files in other folders)
